# citylab_project

custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/action/: GoToPose.action
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/action/: go_to_pose.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/action/detail/: go_to_pose__builder.hpp  go_to_pose__functions.h  go_to_pose__rosidl_typesupport_fastrtps_c.h  go_to_pose__struct.h  go_to_pose__type_support.c  go_to_pose__type_support.cpp  go_to_pose__type_support.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: get_direction.h  get_direction.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: get_direction__functions.h  get_direction__rosidl_typesupport_fastrtps_c.h  get_direction__rosidl_typesupport_introspection_cpp.hpp  get_direction__struct.h  get_direction__traits.hpp  get_direction__type_support.h  get_direction__type_support.hpp
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: _custom_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/srv/: _get_direction.py  _get_direction_s.c
install/custom_interfaces/share/ament_index/resource_index/parent_prefix_path/: custom_interfaces
install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
install/custom_interfaces/share/custom_interfaces/action/: GoToPose.idl
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_interfaces__rosidl_typesupport_cExport.cmake  custom_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_custom_interfaces__rosidl_generator_cExport.cmake  export_custom_interfaces__rosidl_generator_cppExport.cmake
install/custom_interfaces/share/custom_interfaces/rust/: Cargo.toml
install/custom_interfaces/share/custom_interfaces/rust/src/: srv.rs
install/custom_interfaces/share/custom_interfaces/srv/: GetDirection_Request.msg  GetDirection_Response.msg
install/robot_patrol/share/robot_patrol/: package.sh
install/robot_patrol/share/robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_gotopose_action.launch.py  start_test_service.launch.py
log/: latest_build
robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py
robot_patrol/rviz/: config.rviz
robot_patrol/src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
