[package]
name = "custom_interfaces"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.3"
serde = { version = "1", optional = true, features = ["derive"] }
action_msgs = "*"
builtin_interfaces = "*"
sensor_msgs = "*"
unique_identifier_msgs = "*"
std_msgs = "*"
geometry_msgs = "*"

[features]
serde = ['dep:serde', 'rosidl_runtime_rs/serde', 'action_msgs/serde', 'builtin_interfaces/serde', 'sensor_msgs/serde', 'unique_identifier_msgs/serde', 'std_msgs/serde', 'geometry_msgs/serde']
